--- a/src/sass/utility/_gap.scss
+++ b/src/sass/utility/_gap.scss
@@ -1,60 +1,107 @@
 @use "/src/sass/abstracts/" as *;
 @use "/src/sass/base/" as *;
 
+// GAP
 .gap-0 {
     gap: 0;
 }
 
 .gap-025 {
-    gap: 0.25rem;
+    gap: 0 0.25rem;
 }
 
 .gap-05 {
-    gap: 0.5rem;
+    gap: 0 0.5rem;
 }
 
 .gap-1 {
-    gap: 1rem;
+    gap: 0 1rem;
 }
 
 .gap-1-5 {
-    gap: 1.5rem;
+    gap: 0 1.5rem;
 }
 
 .lg-gap-1 {
     @include breakpoint(lg) {
-        gap: 1rem;
+        gap: 0 1rem;
     }
 }
 
 .gap-2 {
-    gap: 2rem;
+    gap: 0 2rem;
 }
 
 .xl-gap-2 {
     @include breakpoint(xl) {
-        gap: 2rem;
+        gap: 0 2rem;
     }
 }
 
 .gap-3 {
-    gap: 3rem;
+    gap: 0 3rem;
 }
 
 .md-gap-3 {
     @include breakpoint(md) {
-        gap: 3rem;
+        gap: 0 3rem;
     }
 }
 
 .xl-gap-3 {
     @include breakpoint(xl) {
-        gap: 3rem;
+        gap: 0 3rem;
     }
 }
 
 .lg-gap-5 {
     @include breakpoint(lg) {
-        gap: 5rem;
+        gap: 0 5rem;
+    }
+}
+
+// COL GAP
+
+.col-gap-0 {
+    column-gap: 0;
+}
+
+.lg-col-gap-1 {
+    @include breakpoint(lg) {
+        column-gap: 1rem;
+    }
+}
+
+// ROW GAP
+
+.row-gap-0 {
+    row-gap: 0;
+}
+
+.row-gap-025 {
+    row-gap: 0.25rem;
+}
+
+.row-gap-05 {
+    row-gap: 0.5rem;
+}
+
+.row-gap-1 {
+    row-gap: 1rem;
+}
+
+.row-gap-1-5 {
+    row-gap: 1.5rem;
+}
+
+.lg-row-gap-1 {
+    @include breakpoint(lg) {
+        row-gap: 1rem;
+    }
+}
+
+.lg-max-row-gap-2 {
+    @include breakpoint-down(lg) {
+        row-gap: 2em;
     }
 }
